--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,19 +1,31 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
+        <link rel="stylesheet" href="{% static 'website/wcss.css' %}">
     </head>
     <body>
-        <h1>CannyBee</h1>
-        <ul>
-            <li><a href="x">O nas</a></li>
-            <li><a href="x">Wiedza</a></li>
-            <li><a href="x">Portfolio</a></li>
-            <li><a href="x">Blog</a></li>
-            <li><a href="x">Forum</a></li>
-            <li><a href="x">Uslugi</a></li>
-        </ul>
+
+        <header id="top">
+
+            <div class="logo">
+                <a href="/"><img src="{% static 'website/img/LOGOTEXT2.png' %}" alt="logo"></a>
+            </div>
+
+            <nav id="topnav">
+                <ul class="menu">
+                    <li><a href="x">O nas</a></li>
+                    <li><a href="x">Wiedza</a></li>
+                    <li><a href="x">Portfolio</a></li>
+                    <li><a href="x">Blog</a></li>
+                    <li><a href="x">Forum</a></li>
+                    <li><a href="x">Uslugi</a></li>
+                </ul>
+            </nav>
+        </header>
+
 
     </body>
 </html>
