--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,6 +26,13 @@
             </nav>
         </header>
 
+        <main>
+
+            {% block content %}
+            {% endblock %}
+
+        </main>
+
 
     </body>
 </html>
