--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
 
             <nav id="topnav">
                 <ul class="menu">
-                    <li><a href="x">O nas</a></li>
+                    <li><a href="/o_nas/">O nas</a></li>
                     <li><a href="x">Wiedza</a></li>
                     <li><a href="x">Portfolio</a></li>
                     <li><a href="x">Blog</a></li>
@@ -155,7 +155,7 @@
             <div class="map">
 
                 <ul>
-                    <li><a href="x">O nas</a></li>
+                    <li><a href="/o_nas/">O nas</a></li>
                     <li><a href="x">Wiedza</a></li>
                     <li><a href="x">Portfolio</a></li>
                     <li><a href="x">Blog</a></li>
