--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
 
             <nav id="topnav">
                 <ul class="menu">
-                    <li><a href="x">O nas</a></li>
+                    <li><a href="/o_nas/">O nas</a></li>
                     <li><a href="x">Wiedza</a></li>
                     <li><a href="x">Portfolio</a></li>
                     <li><a href="x">Blog</a></li>
@@ -24,14 +24,55 @@
                     <li><a href="x">Uslugi</a></li>
                 </ul>
             </nav>
+            <div style="clear:both"></div>
         </header>
 
         <main>
 
-            {% block content %}
-            {% endblock %}
+            <article>
+
+                <section>
+
+                    {% block content %}
+                    {% endblock %}
+
+                </section>
+
+            </article>
 
         </main>
+
+        <footer>
+
+            <div class="map">
+
+                <ul>
+                    <li><a href="/o_nas/">O nas</a></li>
+                    <li><a href="x">Wiedza</a></li>
+                    <li><a href="x">Portfolio</a></li>
+                    <li><a href="x">Blog</a></li>
+                    <li><a href="x">Forum</a></li>
+                    <li><a href="x">Uslugi</a></li>
+                    <li><a href="x">Quiz</a></li>
+                </ul>
+            </div>
+
+            <div class="info">
+
+                <ul>
+                    <li>Canny Bee &reg;</li>
+                    <li>cannybee@gmail.com</li>
+                    <li>+48 666 294 140</li>
+                    <li>32-067 Tenczynek</li>
+                    <li>ul. Podzamcze 6</li>
+                </ul>
+            </div>
+
+            <div class="rights">
+                Created by Krzysztof Piatek  Wszystkie prawa zastrzeżone &copy;
+            </div>
+
+        </footer>
 
 
     </body>
