--- a/website/static/website/wcss.css
+++ b/website/static/website/wcss.css
@@ -1,13 +1,19 @@
 body
 {
-    background-color: #F3F4E3;
+    background-color: #f5f5f5;
     font-family: 'Oswald', sans-serif;
+    height: 100vh;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    overflow-x: hidden;
+
 }
 #top
 {
 
     margin-bottom: 10px;
-    background-color: #F3F4E3;
+    background-color: #f0f3db;
     width: 100%;
 }
 
@@ -52,6 +58,7 @@ body
 main
 {
     background-color: white;
+
 }
 .categories
 {
@@ -170,5 +177,40 @@ footer
     opacity: 0.8;
     margin-top: 20px;
     margin-bottom: 10px;
+}
+.abouttxt
+{
+    text-align: justify;
+}
+.abouttxt h2
+{
+    text-align: center;
+    font-size: 24px;
+}
+.abouttxt p
+{
+    font-size: 18px;
+}
+.logotext
+{
+    display: block;
+    height: 250px;
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.prezes
+{
+    display: block;
+    height: 320px;
+    width: 320px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.abouttxt figure figcaption
+{
+    margin-top: 10px;
+    font-size: 24px;
+    text-align: center;
 }
 
