about page,forms, views

--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
                 <section>
 
                     <div class="categories">
-
+                        <div class="error"><p>{{ msg }}</p></div>>
                         <header>
                             <h1>Witaj na stronie Canny Bee</h1>
                             <p>
