--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,9 @@
         <meta charset="UTF-8">
         <title>Title</title>
         <link rel="stylesheet" href="{% static 'website/wcss.css' %}">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     </head>
     <body>
 
