whole weekend of work ;p

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
                     <li><a href="x">Wiedza</a></li>
                     <li><a href="x">Portfolio</a></li>
                     <li><a href="x">Blog</a></li>
-                    <li><a href="x">Forum</a></li>
+                    <li><a href="x">Quiz</a></li>
                     <li><a href="x">Uslugi</a></li>
                 </ul>
             </nav>
@@ -54,9 +54,8 @@
                     <li><a href="x">Wiedza</a></li>
                     <li><a href="x">Portfolio</a></li>
                     <li><a href="x">Blog</a></li>
-                    <li><a href="x">Forum</a></li>
-                    <li><a href="x">Uslugi</a></li>
                     <li><a href="x">Quiz</a></li>
+                    <li><a href="x">Uslugi</a></li>
                 </ul>
             </div>
 
