--- a/templates/home.html
+++ b/templates/home.html
@@ -22,10 +22,10 @@
                     <li><a href="/o_nas/">O nas</a></li>
                     <li><a href="x">Wiedza</a></li>
                     <li><a href="x">Portfolio</a></li>
-                    <li><a href="x">Blog</a></li>
-                    <li><a href="x">Forum</a></li>
-                    <li><a href="x">Uslugi</a></li>
+                    <li><a href="/blog/">Blog</a></li>
                     <li><a href="x">Quiz</a></li>
+                    <li><a href="x">Uslugi</a></li>
+
                 </ul>
             </nav>
             <div style="clear:both"></div>
@@ -38,7 +38,7 @@
                 <section>
 
                     <div class="categories">
-                        <div class="error"><p>{{ msg }}</p></div>>
+                        <div class="error"><p>{{ msg }}</p></div>
                         <header>
                             <h1>Witaj na stronie Canny Bee</h1>
                             <p>
@@ -101,15 +101,29 @@
                                 <div class="catimg"><img src="{% static 'website/img/blog.png' %}" alt="O nas"></div>
                         </div>
 
+{#                        <div class="categoryleft">#}
+{#                            <div class="catimg"><img src="{% static 'website/img/forum.png' %}" alt="O nas"></div>#}
+{#                            <div class="cattxt">#}
+{#                                <h2>Forum</h2>#}
+{#                                <p>#}
+{#                                    Marketing jak wskazuję jego definicja jest procesem społecznym!#}
+{#                                    Dlatego naszym celem jest stworzyć wokół nas wyjątkową społeczność!#}
+{#                                    A czym jest społeczność bez dedykowanego forum, na którym może się#}
+{#                                    ze sobą komunikować.#}
+{##}
+{#                                </p>#}
+{#                                <a href="#" class="btn"> Zobacz więcej</a>#}
+{#                            </div>#}
+{#                        </div>#}
+
                         <div class="categoryleft">
-                            <div class="catimg"><img src="{% static 'website/img/forum.png' %}" alt="O nas"></div>
+                            <div class="catimg"><img src="{% static 'website/img/quiz.png' %}" alt="O nas"></div>
                             <div class="cattxt">
-                                <h2>Forum</h2>
+                                <h2>Quiz</h2>
                                 <p>
-                                    Marketing jak wskazuję jego definicja jest procesem społecznym!
-                                    Dlatego naszym celem jest stworzyć wokół nas wyjątkową społeczność!
-                                    A czym jest społeczność bez dedykowanego forum, na którym może się
-                                    ze sobą komunikować.
+                                    Masz ochotę sprawdzić swoją wiedzę z zakresu marketingu?
+                                    Weż udział w naszym quizie i sprawdź jak wypadasz
+                                    w porównaniu z resztą naszych użytkowników!
 
                                 </p>
                                 <a href="#" class="btn"> Zobacz więcej</a>
@@ -129,19 +143,8 @@
                                 <div class="catimg"><img src="{% static 'website/img/usługi.png' %}" alt="O nas"></div>
                         </div>
 
-                        <div class="categoryleft">
-                            <div class="catimg"><img src="{% static 'website/img/quiz.png' %}" alt="O nas"></div>
-                            <div class="cattxt">
-                                <h2>Quiz</h2>
-                                <p>
-                                    Masz ochotę sprawdzić swoją wiedzę z zakresu marketingu?
-                                    Weż udział w naszym quizie i sprawdź jak wypadasz
-                                    w porównaniu z resztą naszych użytkowników!
 
-                                </p>
-                                <a href="#" class="btn"> Zobacz więcej</a>
-                            </div>
-                        </div>
+
 
                     </div>
 
@@ -159,9 +162,9 @@
                     <li><a href="x">Wiedza</a></li>
                     <li><a href="x">Portfolio</a></li>
                     <li><a href="x">Blog</a></li>
-                    <li><a href="x">Forum</a></li>
-                    <li><a href="x">Uslugi</a></li>
                     <li><a href="x">Quiz</a></li>
+                    <li><a href="x">Uslugi</a></li>
+
                 </ul>
             </div>
 
