--- a/templates/home.html
+++ b/templates/home.html
@@ -20,11 +20,11 @@
             <nav id="topnav">
                 <ul class="menu">
                     <li><a href="/o_nas/">O nas</a></li>
-                    <li><a href="x">Wiedza</a></li>
-                    <li><a href="x">Portfolio</a></li>
+                    <li><a href="/articles/">Wiedza</a></li>
+{#                    <li><a href="x">Portfolio</a></li>#}
                     <li><a href="/blog/">Blog</a></li>
-                    <li><a href="x">Quiz</a></li>
-                    <li><a href="x">Uslugi</a></li>
+                    <li><a href="/quiz/1">Quiz</a></li>
+                    <li><a href="/services/">Uslugi</a></li>
 
                 </ul>
             </nav>
@@ -57,7 +57,7 @@
                                     Dowiedz się więcej o nas i o naszych działaniach.
 
                                 </p>
-                                <a href="#" class="btn"> Zobacz więcej</a>
+                                <a href="/o_nas/" class="btn"> Zobacz więcej</a>
                             </div>
                         </div>
 
@@ -69,24 +69,24 @@
                                         wiedza na jego temat. Z racji tego że ją posiadamy, chcemy ją
                                         rozpowszechniać, budując wspaniałą społeczność.
                                     </p>
-                                    <a href="#" class="btn"> Zobacz więcej</a>
+                                    <a href="/articles/" class="btn"> Zobacz więcej</a>
                                 </div>
                                 <div class="catimg"><img src="{% static 'website/img/wiedza.png' %}" alt="O nas"></div>
                         </div>
 
-                        <div class="categoryleft">
-                            <div class="catimg"><img src="{% static 'website/img/portfolio.png' %}" alt="O nas"></div>
-                            <div class="cattxt">
-                                <h2>Portfolio</h2>
-                                <p>
-                                    Z racji tego że oferujemy szeroką gammę usług, chcemy
-                                    wam zaprezentować projekty, które udało nam się do tej pory
-                                    zrealizować. A może wkrótce znajdzie się tu również Twój projekt?
-
-                                </p>
-                                <a href="#" class="btn"> Zobacz więcej</a>
-                            </div>
-                        </div>
+{#                        <div class="categoryleft">#}
+{#                            <div class="catimg"><img src="{% static 'website/img/portfolio.png' %}" alt="O nas"></div>#}
+{#                            <div class="cattxt">#}
+{#                                <h2>Portfolio</h2>#}
+{#                                <p>#}
+{#                                    Z racji tego że oferujemy szeroką gammę usług, chcemy#}
+{#                                    wam zaprezentować projekty, które udało nam się do tej pory#}
+{#                                    zrealizować. A może wkrótce znajdzie się tu również Twój projekt?#}
+{##}
+{#                                </p>#}
+{#                                <a href="#" class="btn"> Zobacz więcej</a>#}
+{#                            </div>#}
+{#                        </div>#}
 
                         <div class="categoryright">
                                 <div class="cattxt">
@@ -96,7 +96,7 @@
                                         co związane z dynamicznie rozwijającym się marketingiem internetowym!
                                         Przybliżymy wam nowości, trendy oraz nasze przemyślenia na ich temat!
                                     </p>
-                                    <a href="#" class="btn"> Zobacz więcej</a>
+                                    <a href="/blog/" class="btn"> Zobacz więcej</a>
                                 </div>
                                 <div class="catimg"><img src="{% static 'website/img/blog.png' %}" alt="O nas"></div>
                         </div>
@@ -126,7 +126,7 @@
                                     w porównaniu z resztą naszych użytkowników!
 
                                 </p>
-                                <a href="#" class="btn"> Zobacz więcej</a>
+                                <a href="/quiz/1" class="btn"> Zobacz więcej</a>
                             </div>
                         </div>
 
@@ -138,7 +138,7 @@
                                         Co za tym idzie ,,okręt" naszych usług również musi być pokaźny,
                                         pozwól że Ci go przybliżymy!
                                     </p>
-                                    <a href="#" class="btn"> Zobacz więcej</a>
+                                    <a href="/services/" class="btn"> Zobacz więcej</a>
                                 </div>
                                 <div class="catimg"><img src="{% static 'website/img/usługi.png' %}" alt="O nas"></div>
                         </div>
@@ -159,11 +159,11 @@
 
                 <ul>
                     <li><a href="/o_nas/">O nas</a></li>
-                    <li><a href="x">Wiedza</a></li>
-                    <li><a href="x">Portfolio</a></li>
-                    <li><a href="x">Blog</a></li>
-                    <li><a href="x">Quiz</a></li>
-                    <li><a href="x">Uslugi</a></li>
+                    <li><a href="/articles/">Wiedza</a></li>
+{#                    <li><a href="x">Portfolio</a></li>#}
+                    <li><a href="/blog/">Blog</a></li>
+                    <li><a href="/quiz/1">Quiz</a></li>
+                    <li><a href="/services/">Uslugi</a></li>
 
                 </ul>
             </div>
