--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,11 +20,11 @@
             <nav id="topnav">
                 <ul class="menu">
                     <li><a href="/o_nas/">O nas</a></li>
-                    <li><a href="x">Wiedza</a></li>
-                    <li><a href="x">Portfolio</a></li>
-                    <li><a href="x">Blog</a></li>
-                    <li><a href="x">Quiz</a></li>
-                    <li><a href="x">Uslugi</a></li>
+                    <li><a href="/articles/">Wiedza</a></li>
+{#                    <li><a href="x">Portfolio</a></li>#}
+                    <li><a href="/blog/">Blog</a></li>
+                    <li><a href="/quiz/1">Quiz</a></li>
+                    <li><a href="/services/">Uslugi</a></li>
                 </ul>
             </nav>
             <div style="clear:both"></div>
@@ -51,11 +51,11 @@
 
                 <ul>
                     <li><a href="/o_nas/">O nas</a></li>
-                    <li><a href="x">Wiedza</a></li>
-                    <li><a href="x">Portfolio</a></li>
-                    <li><a href="x">Blog</a></li>
-                    <li><a href="x">Quiz</a></li>
-                    <li><a href="x">Uslugi</a></li>
+                    <li><a href="/articles/">Wiedza</a></li>
+{#                    <li><a href="x">Portfolio</a></li>#}
+                    <li><a href="/blog/">Blog</a></li>
+                    <li><a href="/quiz/1">Quiz</a></li>
+                    <li><a href="/services/">Uslugi</a></li>
                 </ul>
             </div>
 
