--- a/website/static/website/wcss.css
+++ b/website/static/website/wcss.css
@@ -142,6 +142,7 @@ main
 }
 footer
 {
+    margin-top: 30px;
     background-color: #9DECEF;
     text-align: center;
 }
@@ -345,4 +346,13 @@ footer
 .dot.active
 {
     background-color: #0F3364; !important;
+}
+.quiz
+{
+    text-align: justify;
+}
+.quiz h2
+{
+    text-align: center;
+    margin-bottom: 30px;
 }
